iptables/rules.v4
# Generated by iptables-save v1.4.21 on Tue Sep 27 18:14:58 2016
*filter
# Generated by iptables-save v1.4.21 on Tue Sep 27 16:25:04 2016
##Question 1
:INPUT DROP [0:0]
##Question 2
-A INPUT -p icmp -s localhost -j DROP
## Question 3
-A OUTPUT -p all -d localhost -j DROP
##Question 4
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
##Question 5
-A INPUT -p all -i eth0 -j DROP
##Question 6
-A OUTPUT -p all -o eth0 -j DROP
##Question 7
-A OUTPUT -p tcp -m multiport --dports 21 -j DROP
##Question 8
-A OUTPUT -p tcp -o eth0 --sport 1:1024 -j DROP
-A OUTPUT -p udp -o eth0 --sport 1:1024 -j DROP
##Question 9
-A OUTPUT -m tcp -p tcp -o ethO --syn -j DROP
##Question 10
-A INPUT -m icmp -p icmp --icmp-type echo-request -j DROP
##Question 11
-A OUTPUT -m icmp -p icmp --icmp-type echo-reply -j DROP
##Question 12
-A INPUT -m mac ! --mac-source 08:00:27:25:bd:c6 -p all -i eth0 -j DROP
##Question 13
:INPUT DROP [0:0]
##Question 14
-A INPUT -p tcp --syn -m limit --limit 2/minute --limit-burst 5 -j ACCEPT
##Question 15
-A INPUT -p icmp -m limit --limit 2/minute --limit-burst 5 -j ACCEPT
##Question 16
:INPUT DROP [0:0]
:OUTPUT DROP [0:0]
:FORWARD DROP [0:0]
##Question 17
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
##Question 18
-A INPUT -m state --state INVALID -j DROP
##Question 19
-A OUTPUT -p tcp --dport 80 -m state --state NEW -j ACCEPT
##Question 20 
#### Effecer la règle ou se connecter en https (port 443) 
##Question 21
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 25 -j ACCEPT
##Question 22
-A OUTPUT -p tcp -m tcp --dport 80  -j DROP
-A OUTPUT -p tcp -m tcp --dport 443 -j DROP
##Question 23
-A INPUT -p tcp --dport 80 --syn -m limit --limit 100/s -j ACCEPT
-A INPUT -p tcp --dport 80 --syn -j DROP
##SSH Allow
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Tue Sep 27 16:25:04 2016
